Fix naming for getting orders count to be more consistent
