# pkg/gen/ordersapi/ordersoperations/get_orders_count_by_issuer_responses.go
@@ -1,0 +1,154 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package ordersoperations
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"net/http"
+
+	"github.com/go-openapi/runtime"
+
+	"github.com/transcom/milmove_orders/pkg/gen/ordersmessages"
+)
+
+// GetOrdersCountByIssuerOKCode is the HTTP code returned for type GetOrdersCountByIssuerOK
+const GetOrdersCountByIssuerOKCode int = 200
+
+/*GetOrdersCountByIssuerOK Successful
+
+swagger:response getOrdersCountByIssuerOK
+*/
+type GetOrdersCountByIssuerOK struct {
+
+	/*
+	  In: Body
+	*/
+	Payload *ordersmessages.OrdersCountByIssuer `json:"body,omitempty"`
+}
+
+// NewGetOrdersCountByIssuerOK creates GetOrdersCountByIssuerOK with default headers values
+func NewGetOrdersCountByIssuerOK() *GetOrdersCountByIssuerOK {
+
+	return &GetOrdersCountByIssuerOK{}
+}
+
+// WithPayload adds the payload to the get orders count by issuer o k response
+func (o *GetOrdersCountByIssuerOK) WithPayload(payload *ordersmessages.OrdersCountByIssuer) *GetOrdersCountByIssuerOK {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the get orders count by issuer o k response
+func (o *GetOrdersCountByIssuerOK) SetPayload(payload *ordersmessages.OrdersCountByIssuer) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *GetOrdersCountByIssuerOK) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(200)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
+
+// GetOrdersCountByIssuerBadRequestCode is the HTTP code returned for type GetOrdersCountByIssuerBadRequest
+const GetOrdersCountByIssuerBadRequestCode int = 400
+
+/*GetOrdersCountByIssuerBadRequest Invalid
+
+swagger:response getOrdersCountByIssuerBadRequest
+*/
+type GetOrdersCountByIssuerBadRequest struct {
+}
+
+// NewGetOrdersCountByIssuerBadRequest creates GetOrdersCountByIssuerBadRequest with default headers values
+func NewGetOrdersCountByIssuerBadRequest() *GetOrdersCountByIssuerBadRequest {
+
+	return &GetOrdersCountByIssuerBadRequest{}
+}
+
+// WriteResponse to the client
+func (o *GetOrdersCountByIssuerBadRequest) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.Header().Del(runtime.HeaderContentType) //Remove Content-Type on empty responses
+
+	rw.WriteHeader(400)
+}
+
+// GetOrdersCountByIssuerUnauthorizedCode is the HTTP code returned for type GetOrdersCountByIssuerUnauthorized
+const GetOrdersCountByIssuerUnauthorizedCode int = 401
+
+/*GetOrdersCountByIssuerUnauthorized must be authenticated to use this endpoint
+
+swagger:response getOrdersCountByIssuerUnauthorized
+*/
+type GetOrdersCountByIssuerUnauthorized struct {
+}
+
+// NewGetOrdersCountByIssuerUnauthorized creates GetOrdersCountByIssuerUnauthorized with default headers values
+func NewGetOrdersCountByIssuerUnauthorized() *GetOrdersCountByIssuerUnauthorized {
+
+	return &GetOrdersCountByIssuerUnauthorized{}
+}
+
+// WriteResponse to the client
+func (o *GetOrdersCountByIssuerUnauthorized) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.Header().Del(runtime.HeaderContentType) //Remove Content-Type on empty responses
+
+	rw.WriteHeader(401)
+}
+
+// GetOrdersCountByIssuerForbiddenCode is the HTTP code returned for type GetOrdersCountByIssuerForbidden
+const GetOrdersCountByIssuerForbiddenCode int = 403
+
+/*GetOrdersCountByIssuerForbidden Forbidden
+
+swagger:response getOrdersCountByIssuerForbidden
+*/
+type GetOrdersCountByIssuerForbidden struct {
+}
+
+// NewGetOrdersCountByIssuerForbidden creates GetOrdersCountByIssuerForbidden with default headers values
+func NewGetOrdersCountByIssuerForbidden() *GetOrdersCountByIssuerForbidden {
+
+	return &GetOrdersCountByIssuerForbidden{}
+}
+
+// WriteResponse to the client
+func (o *GetOrdersCountByIssuerForbidden) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.Header().Del(runtime.HeaderContentType) //Remove Content-Type on empty responses
+
+	rw.WriteHeader(403)
+}
+
+// GetOrdersCountByIssuerInternalServerErrorCode is the HTTP code returned for type GetOrdersCountByIssuerInternalServerError
+const GetOrdersCountByIssuerInternalServerErrorCode int = 500
+
+/*GetOrdersCountByIssuerInternalServerError Server error
+
+swagger:response getOrdersCountByIssuerInternalServerError
+*/
+type GetOrdersCountByIssuerInternalServerError struct {
+}
+
+// NewGetOrdersCountByIssuerInternalServerError creates GetOrdersCountByIssuerInternalServerError with default headers values
+func NewGetOrdersCountByIssuerInternalServerError() *GetOrdersCountByIssuerInternalServerError {
+
+	return &GetOrdersCountByIssuerInternalServerError{}
+}
+
+// WriteResponse to the client
+func (o *GetOrdersCountByIssuerInternalServerError) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.Header().Del(runtime.HeaderContentType) //Remove Content-Type on empty responses
+
+	rw.WriteHeader(500)
+}
